deployments/kubernetes/base/topup/topup-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: topup
  namespace: payment-gateway
spec:
  selector:
    app: topup
  ports:
    - name: http
      port: 8088
      targetPort: 8088
    - name: grpc
      port: 9008
      targetPort: 9008
  type: ClusterIP
